# AbBOT-python

./: .gitignore  Dockerfile  FAQ.md  LICENSE  README.md  docker-compose.yml  flake.nix  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: yapf.yml
bot/: .gitignore  arguments.py  data.py  forms.py  prompt.py  rand_select.py  redirection.py  server.py  typos.py
bot/data/: TX_Zips.csv  cities.json  doctors.json  firstnameGirl.json  fns.csv  lns.csv  txzips.json  zips.json
docs/: setup-windows.md
src/bot/: __main__.py  arguments.py  data.py  prompt.py  server.py
src/bot/data/: firstnameBoy.json  lastname.json
