# Setup config is setuptool's standard way of helping automate Python package distribution
# A Setup cfg template respectfully borrowed from [2] 
#
# [1] - https://setuptools.readthedocs.io/en/latest/setuptools.html
# [2] - https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = Abbot
# What's the versioning scheme we're using, Sean~?
version = 0.1
author = Sean DaBlack
url = https://github.com/SeanDaBlack/AbBOT
description = A tool for concerned citizens to report depraved activities of a licentious nature.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
platform = any
keywords = selenium
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/SeanDaBlack/AbBOT/issues

python_requires = >= 3.4
setup_requires =
    # setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
    setuptools >=46.4.0     # let's you use attr: to extract version from a module

[options]
zip_safe = false
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
        .

include_package_data=True

[options.entry_points]
console_scripts =
    abbot = bot:__main__

[options.package_data]
* = *.md
    *.toml
    *.txt
    *.gif
    *.json

[sdist]
formats = zip, gztar
